set camera distance appropriate to surface size

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ x Delete height test
 x Rename coverage test with 2d and make it fully 2D throughout
 x Refactor search with fluent names
 x Refactor test files to live next to their modules
-* Toolpath gen takes a tool; Add ballend tool module
-* set initial camera zoom for surface size
+x Toolpath gen takes a tool; Add ballend tool module
+x set initial camera zoom for surface size
 ? Switch to mm as units??
 * Analysis function to find nearest point on cut surface to a point
 * New test that cut surface is close to surface
