refine search for highest point

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@ x Refactor test files to live next to their modules
 x Toolpath gen takes a tool; Add ballend tool module
 x set initial camera zoom for surface size
 x Switch to mm as units
-* Find height maxima
+x Find height maxima
  x Find highest point on grid
- * Recursively apply grid search to find approximate peak
+ x Recursively apply grid search to find approximate peak
 * Trace contour spiralling down around each
 * Stop when reach bottom
+* Support for multiple seperate shapes and/or multiple height maxima
 * ? cutdir is same all the way across the profile section; it should surely turn in less near the centreline? ?? Is this true?
 ? Editing...
 * Modify sampling of toolpath: Coalesce samples that have low curvature
